--- a/index.css
+++ b/index.css
@@ -168,6 +168,13 @@ body {
     text-align: center;
 }
 
+h1 {
+    text-align: center;
+    font-size: 3em;
+    padding: 20px;
+    font-weight: 100;
+}
+
 #layout {
     margin-left: auto;
     margin-right: auto;
