--- a/index.css
+++ b/index.css
@@ -218,11 +218,9 @@ h1 {
 }
 
 #intro {
-    padding: 0 !important;
-    width: 97%;
-    text-align: center;
-    margin-top: 5px;
-    padding: 0;
+    width: 90%;
+    margin-left: auto;
+    margin-right: auto;
     text-align: justify;
 }
 
